--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
+    "lint-staged": "^15.2.5",
     "prisma": "^5.15.0",
     "tsx": "^4.11.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "git-commit-msg-linter": "^5.0.8",
+    "husky": "^9.0.11"
   }
 }
