--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "express": "^4.19.2",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.0.11"
