--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "technical-test",
+  "name": "clients-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,17 +9,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
+    "eslint": "^8.57.0",
     "lint-staged": "^15.2.5",
     "prisma": "^5.15.0",
     "tsx": "^4.11.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.12.0"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.19.2",
     "git-commit-msg-linter": "^5.0.8",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "libphonenumber-js": "^1.11.3",
+    "zod": "^3.23.8"
   }
 }
